# WalletsTool

./: .gitignore  ABI_FEATURE_README.md  AGENTS.md  CLAUDE.md  DATABASE_HOT_RELOAD.md  GAS_FIX_SUMMARY.md  README.md  RELEASE_NOTES.md  RPC_DISABLE_FIX.md  WINDOW_CLOSE_FUNCTIONALITY.md  index.html  package-lock.json  package.json  playwright.config.ts  test_sol_rpc.py  token_configs.sql  vite.config.js  wallet_monitor.md  未来功能开发计划书.md
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml  test.yml
.vercel/: project.json
docs/: BROWSER_AUTOMATION_DESIGN.md  CUSTOM_WINDOW_TITLE.md  DEV_PILOT_DESIGN.md  INITIALIZATION.md  LINUX_INSTALL.md  RELEASE.md  TAURI_OPTIMIZATION.md  WALLET_ENCRYPTION.md  WALLET_MANAGER_ADD_WALLET_DESIGN.md  WALLET_SYSTEM_IMPORT_DESIGN.md  WINDOW_NAMING.md  transfer-performance-optimization.md  未来功能开发计划书.md
e2e/: README.md  api-integration.spec.ts  balance-query.spec.ts  global-setup.ts  global-teardown.ts  tauri-helpers.ts  wallet-manager.spec.ts
public/: update_pic_urls.html
public/template/: import_model.xlsx
scripts/: README.md  export_db_to_sql.py  generate-release-notes.js  install-deps.js  playwright-runner.js  update-version.js
scripts/ci/: prepare-tauri-signing-key.cjs
scripts/images/: optimize-images.js
sql/: init.sql
src/: App.vue  main.js  style.css
src-tauri/: .taurignore  Cargo.toml  Cargo.toml.bak  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/conf/: chain_setting.json  coin_binance_setting.json  coin_op_setting.json  coin_starknet_setting.json  web3_tools.db
src-tauri/conf/balance/: coin_avax_setting.json  coin_base_setting.json  coin_binance_setting.json  coin_evmos_setting.json  coin_okt_setting.json  coin_opbnb_setting.json  coin_polygon_setting.json  coin_sahara_setting.json  coin_sepolia_setting.json  coin_starknet_setting.json
src-tauri/conf/chains/: coin_arb_setting.json  coin_base_setting.json  coin_binance_setting.json  coin_dym_setting.json  coin_evmos_setting.json  coin_holesky_setting.json  coin_nexus_dev_setting.json  coin_polygon_setting.json  coin_scroll_setting.json  coin_sol_setting.json  coin_story_test_setting.json  coin_zksync_setting.json
src-tauri/conf/transfer/: coin_0g_setting.json  coin_arb_setting.json  coin_bevm_setting.json  coin_binance_setting.json  coin_geth_setting.json  coin_nexus_dev_setting.json  coin_okt_setting.json  coin_scroll_setting.json  coin_starknet_setting.json
src-tauri/data/: init.sql  public_init.sql  secure_init.sql  wallet_manager.db  wallets_tool.db  web3_tools.db
src-tauri/data/migrations/: V0001__chains_add_ecosystem.sql
src-tauri/icons/: icon.icns
src-tauri/playwright-bridge/: package.json
src-tauri/sql/: init.sql
src-tauri/src/: main.rs  simple_balance_query.rs  utils.rs
src-tauri/src/database/: AGENTS.md  chain_service.rs  commands.rs  dual_database.rs  encryption.rs  json_migration.rs  migrations.rs  mod.rs  models.rs  public_init.rs  rpc_service.rs  rpc_service_old.rs  secure_init.rs
src-tauri/src/plugins/: fs_extra.rs  mod.rs
src-tauri/src/wallet_manager/: chain_config.rs  mod.rs  provider.rs  token_transfer.rs  transfer.rs  utils.rs
src-tauri/src/wallet_manager/ecosystems/ethereum/: mod.rs  provider.rs  token_transfer.rs  transfer.rs
src-tauri/src/wallet_manager/ecosystems/solana/: mod.rs
src-tauri/src/wallets_tool/: mod.rs  rpc_management.rs  update.rs  utils.rs
src-tauri/src/wallets_tool/airdrop/: commands.rs  db.rs  executor.rs  mod.rs  models.rs  scheduler.rs
src-tauri/src/wallets_tool/ecosystems/ethereum/: AGENTS.md  alloy_utils.rs  chain_config.rs  mod.rs  provider.rs  proxy_commands.rs  proxy_manager.rs  rpc_management.rs  simple_balance_query.rs  token_transfer.rs  transfer.rs
src-tauri/src/wallets_tool/ecosystems/solana/: AGENTS.md  mod.rs  provider.rs  transfer.rs
src-tauri/src/wallets_tool/security/: memory.rs  mod.rs  protection.rs  session.rs
src-tauri/src/wallets_tool/wallet_manager/: commands.rs  models.rs  service.rs
src-tauri/src/web3_tools/: chain_config.rs  cmd.rs  mod.rs  provider.rs  token_transfer.rs  transfer.rs  utils.rs
src/components/: ChainIcon.vue  ChainManagement.vue  CodeEditor.vue  DatabasePasswordModal.vue  ProxyConfigModal.vue  RpcManagement.vue  SecretRevealModal.vue  TableSkeleton.vue  TitleBar.vue  TokenManagement.vue  VirtualScrollerTable.vue  WalletImportModal.vue  WalletSystemImportModal.vue
src/components/transfer/: TransferConfigForm.vue
src/demo/: Greet.vue  abis.js  test.js
src/examples/: windowNamingExamples.js
src/features/airdrop/components/: ApiHelper.vue  BrowserFarm.vue  ExecutionPanel.vue  ExtensionManager.vue  ScriptEditor.vue  ScriptRecorder.vue  TaskManager.vue  TaskMonitor.vue  WalletManager.vue
src/features/airdrop/pages/: Airdrop.vue  BrowserAutomation.vue
src/features/airdrop/services/: browserAutomationService.ts  extensionService.ts  playwrightService.ts  recorderService.ts
src/features/airdrop/utils/: ErrorHandling.ts  LoggingSystem.ts  ProxyTester.ts
src/features/common/pages/: EcosystemEntry.vue  Settings.vue
src/features/common/stores/: ecosystem.ts
src/features/ethereum/balance/pages/: Balance.vue
src/features/ethereum/transfer/: AGENTS.md
src/features/home/pages/: Home.vue
src/features/solana/transfer/: AGENTS.md
src/features/wallet_manager/pages/: WalletManager.vue
src/pages/: Balance.vue  Home.vue  Monitor.vue  Transfer.vue  Uniswap.vue
src/router/: index.js
src/scripts/: index.js
src/scripts/balance/: balance_utils.js  base_coin_balance.js  starknet_balance.js  token_balance.js
src/scripts/common/: provider.js  utils.js
src/scripts/token/: token_utils.js
src/scripts/transfer/: base_coin_transfer.js  test.js  token_transfer.js  transfer_utils.js
src/scripts/uniswap/: constants.js  pool.js  trade.js
src/stores/: database.js  ecosystem.js  index.js
src/transfer/: base_coin.rs  config.rs  manager.rs  mod.rs  provider.rs  token.rs  utils.rs
src/utils/: debounce.js  downloadWithDialog.js  exportWithDialog.js  secretCrypto.js  windowNames.js
(+19 files in other folders)
