[package]
name = "WalletsTool"
version = "0.4.13"
description = "web3 链上钱包管理工具集，基于 Vue3 Tauri 等技术"
authors = ["renmk"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = ["tray-icon", "wry"], default-features = false }
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-updater = "2.0.0"
anyhow = "1.0.98"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs", "net", "time"] }
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# 异步流处理
futures = "0.3"
# 随机数
rand = "0.8"
# URL 解析
url = "2.0"
# 目录路径
dirs = "5.0"
# 懒加载静态变量
lazy_static = "1.4"
# 数据库 - 使用 SQLCipher 加密
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"], default-features = false }
# SQLCipher 支持 - 启用 bundled-sqlcipher 特性
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }
chrono = { version = "0.4.41", features = ["serde"] }
# 以太坊相关
alloy = { version = "1.4.0", default-features = false, features = [
    "std",
    "json",
    "rpc-client",
    "signer-local",
    "providers",
    "transports",
    "transport-http",
    "reqwest-rustls-tls",
    "network",
    "consensus",
    "contract",
    "rpc-types-eth",
] }
alloy-provider = "1.4"
alloy-primitives = "1.4"
alloy-signer-local = { version = "1.4", features = ["mnemonic"] }
alloy-rpc-types-eth = "1.4"
alloy-network = "1.4"
alloy-signer = "1.4"
alloy-transport-http = "1.4"
hex = "0.4"
# Solana (Agave SDK - OpenSSL-free with rustls-tls)
solana-sdk = "2.2"
bs58 = "0.5"
spl-token = { version = "7.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0", features = ["no-entrypoint"] }
bincode = "1.3"
# 明确指定兼容版本
base64 = "0.22.1"
# 正则表达式
regex = "1.10"
# Cron表达式解析
cron = "0.14"
# 加密相关
aes = "0.8"
cbc = "0.1"
zeroize = { version = "^1.8", features = ["derive"] }
sha2 = "0.10"
winapi = { version = "0.3", features = ["memoryapi", "debugapi", "sysinfoapi", "processthreadsapi", "errhandlingapi"] }
block-padding = "0.3"
pbkdf2 = "0.12"
hmac = "0.12"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"

# Release模式优化配置
[profile.release]
lto = false
codegen-units = 16
opt-level = 2
strip = true
panic = "abort"
incremental = false

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# 禁用增量编译，减少缓存
[profile.dev]
incremental = true
# 优化级别为0以加快编译速度
opt-level = 0
# 禁用调试信息以加速编译
debug = false

# 为特定依赖项设置优化级别（加快第三方库编译）
[profile.dev.package."*"]
opt-level = 2

# 优化生产构建的依赖项
[profile.release.package."*"]
opt-level = 2

# Remove patch to use default version
[patch.crates-io]
